--- a/part-1/gcd.yaml
+++ b/part-1/gcd.yaml
@@ -4,6 +4,12 @@ input_streams:
   0x80: [48, 18]
   0x84: []
 reports:
+  - name: Log
+    slice: all
+    view: |
+      Acc {Acc:hex} {Acc:dec}
+      {memory:0:32}
+      {pc}:	{instruction}	{pc:label}
   - name: Result
     slice: last
     view: |
